--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,17 @@
             nombre: 'Dario'
         })
 
-        socket.on('mensaje', function(payload) {
-            console.log('Escuchando ', payload)
+        /*    socket.on('mensaje', function(payload) {
+               console.log('Escuchando ', payload)
+           }) */
+
+        socket.on('nuevo-mensaje', function(payload) {
+            console.log('Mensaje desde flutter', payload)
+        });
+
+        socket.on('active-bands', function(payload) {
+            console.clear();
+            console.table(payload);
         })
     </script>
 </body>
